--- a/exercicio1/style.css
+++ b/exercicio1/style.css
@@ -8,11 +8,18 @@
   width: 100vw;
   background-color: lightgray;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
 
 .item {
+  display: flex;
   border: 1px solid black;
   background-color: white;
   height: 180px;
   width: 180px;
+  justify-content: center;
+  align-items: center;
 }
