--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -6,4 +6,12 @@
 main{
   padding-top: 20px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+figure {
+  display: flex;
+  border: 0.01rem black solid;
 }
