--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -7,7 +7,7 @@ main{
   padding-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 10px;
 }
 
